kube-derive/tests/ui/missing_required.stderr
error: Missing field `group`
 --> tests/ui/missing_required.rs:6:10
  |
6 | #[derive(CustomResource, Serialize, Deserialize, Debug, Clone, JsonSchema)]
  |          ^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `CustomResource` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Missing field `version`
 --> tests/ui/missing_required.rs:6:10
  |
6 | #[derive(CustomResource, Serialize, Deserialize, Debug, Clone, JsonSchema)]
  |          ^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `CustomResource` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Missing field `kind`
 --> tests/ui/missing_required.rs:6:10
  |
6 | #[derive(CustomResource, Serialize, Deserialize, Debug, Clone, JsonSchema)]
  |          ^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `CustomResource` (in Nightly builds, run with -Z macro-backtrace for more info)
